--- a/chapterAPPX_EMIS_trends.tex
+++ b/chapterAPPX_EMIS_trends.tex
@@ -5,12 +5,12 @@
 \cleardoublepage
 \chapter[Emission trends]{National emission trends}
 \label{ch:appx_emis_trends}
-
+%DS checked 2/9
 
 This appendix contains trends of national emission data for main
 pollutants and   primary particle emissions for the years
-2000--2019 in the EMEP domain, which covers the geographic area between 30\degrees N-82\degrees N latitude and 30\degrees   
-W-90\degrees E longitude.\\
+2000--2019 in the EMEP domain, which covers the geographic area between 30\degrees N--82\degrees N latitude and 30\degrees   
+W--90\degrees E longitude.\\
 
 The land-based emissions for 2000--2019  have been derived from the  2021 official data submissions to UNECE CLRTAP \citep{CEIP2021}.
 For primary PM in 2019, two different sets of emissions have been used: 1) EMEP emissions as prepared by CEIP based on the official data submissions
