--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -1,6 +1,6 @@
 \chapter[Emissions 2019]{Emissions for 2019}
 \label{ch:emis2019}
-
+%DS changed to Ch~X.X notation
 
 {\bf{Bradley Matthews, Katarina Mareckova, Sabine Schindlbacher, Bernhard Ullrich, \\
 Robert Wankm\"uller and all CEIP/Umweltbundesamt Austria, Jeroen Kuenen (TNO)}}
@@ -38,7 +38,7 @@ have to be reported to the EMEP Centre on Emission Inventories and Projections (
 
 \section{Reporting of emission inventories in 2021}
 
-Completeness and consistency of submitted data have improved significantly since EMEP started collecting information on emissions. Data of at least 47 Parties each year were submitted to CEIP since 2017 (see Figure~\ref{fig:CEIP1}). In 2021 (as of 1 June 2021), 48 Parties (94\%) submitted inventories\footnote{The original submissions from the Parties can be accessed via the CEIP homepage on \url{https://www.ceip.at/status-of-reporting-and-review-results/2021-submissions}.}, three Parties\footnote{Azerbaijan, Bosnia and Herzegovina and Kyrgyzstan} did not submit any data and 42 Parties reported black carbon (BC) emissions (see section~\ref{sec:bc}). As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS, 26 Parties reported gridded data  \citep{CEIP2021}.
+Completeness and consistency of submitted data have improved significantly since EMEP started collecting information on emissions. Data of at least 47 Parties each year were submitted to CEIP since 2017 (see Figure~\ref{fig:CEIP1}). In 2021 (as of 1 June 2021), 48 Parties (94\%) submitted inventories\footnote{The original submissions from the Parties can be accessed via the CEIP homepage on \url{https://www.ceip.at/status-of-reporting-and-review-results/2021-submissions}.}, three Parties\footnote{Azerbaijan, Bosnia and Herzegovina and Kyrgyzstan} did not submit any data and 42 Parties reported black carbon (BC) emissions (see Ch~\ref{sec:bc}). As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS, 26 Parties reported gridded data  \citep{CEIP2021}.
 
 \begin{figure}[h]
 \centering
@@ -183,9 +183,9 @@ To compile these datasets each year, CEIP synthesizes and evaluates the most rec
 The following subchapters describe important aspects of the 2021 EMEP datasets, summarising:
 
 \begin{itemize}
-    \item The status of reporting of national gridded emissions data and the extent to which these are used to distribute emissions spatially (Section~\ref{sec:griddedemis})
-    \item The extent to which sectoral emissions were gap-filled or replaced (Section~\ref{sec:gapfilling})
-    \item  The sectoral contributions (Section~\ref{sec:GNFRsec}) and temporal trends (Section~\ref{sec:emistrends}) in the emissions of carbon monoxide, nitrogen oxides, sulfur oxides, ammonia, non-methane volatile organic carbons, and particulate matter including black carbon. Trends in shipping emissions are discussed separately (Section~\ref{sec:shiptrends}).     
+    \item The status of reporting of national gridded emissions data and the extent to which these are used to distribute emissions spatially (Ch~\ref{sec:griddedemis})
+    \item The extent to which sectoral emissions were gap-filled or replaced (Ch~\ref{sec:gapfilling})
+    \item  The sectoral contributions (Ch~\ref{sec:GNFRsec}) and temporal trends (Ch~\ref{sec:emistrends}) in the emissions of carbon monoxide, nitrogen oxides, sulfur oxides, ammonia, non-methane volatile organic carbons, and particulate matter including black carbon. Trends in shipping emissions are discussed separately (Ch~\ref{sec:shiptrends}).     
 \end{itemize}
 
 
