--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -1,7 +1,8 @@
 \chapter[Introduction]{Introduction}
 \label{ch:Intro}
+%DS changed to Ch X.X notation
 
-\old{TODO}
+%\old{TODO}
 
 \section{Purpose and structure of this report}
 
@@ -226,7 +227,7 @@ UNECE definition uses clear-sky global radiation exceeding 50 W
 m$^{-2}$ to define daylight, whereas the EU AOT definitions use day
 hours from 08:00-20:00.).
 
-In practice, it is very difficult to convert measured \ce{O3} from an EMEP observation site to the UNECE AOT40 values, since there are no data with which is to estimate the vertical gradient to get to upper-canopy \ce{O3}. Therefore, in the comparison of modelled and observed AOT40s in Chapters \ref{ch:chapterStatus} and \ref{ch:Trends}, we have used the EU AOT definitions, since this approach is readily applicable to observed as well as modelled values. We do, however, present source-receptor calculations for the UNECE metrics \aotucf and \aotucc in Appendix~\ref{ch:appx_sr2019}.
+In practice, it is very difficult to convert measured \ce{O3} from an EMEP observation site to the UNECE AOT40 values, since there are no data with which is to estimate the vertical gradient to get to upper-canopy \ce{O3}. Therefore, in the comparison of modelled and observed AOT40s in Ch \ref{ch:chapterStatus} and Ch \ref{ch:Trends}, we have used the EU AOT definitions, since this approach is readily applicable to observed as well as modelled values. We do, however, present source-receptor calculations for the UNECE metrics \aotucf and \aotucc in Appendix~\ref{ch:appx_sr2019}.
 
 The AOT40 levels reflect interest in long-term ozone exposure which is
 considered important for vegetation - critical levels of 3~000~ppb.h
