--- a/chapterMeasurementDevelopments.tex
+++ b/chapterMeasurementDevelopments.tex
@@ -1,4 +1,5 @@
 \chapter[Development of measurements]{Developments in the monitoring network, data quality and database infrastructure}\label{ch:ObsDevel}
+%DS changed to Ch~X.X notation
 
 {\bf{Wenche Aas, Anne Hjellbrekke and Kjetil T{\o}rseth}}
 \vspace{30pt}
@@ -11,7 +12,7 @@ The complexity in the monitoring program with respect to the number of variables
 
 The index is defined for level 1 parameters only, and is calculated based on the data reported in comparison with the expected. EMEP recommends one site pr 50.000 km$^{2}$, but this target number is adjusted for very large countries (i.e. KZ, RU, TR and UA). The components and number of variables to be measured in accordance to the strategy are as follows: major inorganic ions in precipitation (10 variables), major inorganic components in air (13 variables), ozone (1 variable), PM mass (2 variables) and heavy metals in precipitation (7 variables). For heavy metals, the sampling frequency is weekly, and for the other components it is daily or hourly (ozone). Based on the relative implementation of the different variables, the index has been given the following relative weights: Inorganics in precipitation: 30\%, inorganics in air: 30\%, ozone: 20\%, PM mass: 10\%, heavy metals: 10\%.
 
-Figure~\ref{fig:Index-for-implementation} summarises implementation in 2019 compared to 2000, 2005 and 2010. The countries are sorted from left to right with increasing index for 2019. Slovakia,  Estonia, The Netherlands, Denmark, and Switzerland have almost complete programs with an index of 90\% or higher. Small countries generally comply better (due to more easily satisfying the site density requirements). Since 2010, 35\% of the Parties have improved their monitoring programme,  while 37\% have a decrease. Improvements are seen in e.g. France, Croatia and Belgium.  One Party, Malta, has reported data in 2019 and not in 2010, while Georgia, Moldova, Montenegro and Romania have stopped reporting/measuring. In Figure~\ref{fig:EMEP-measurement-network} in Chapter~\ref{Obs_2019}, the geographical distribution of level 1 sites is shown for 2019.  In large parts of Europe, implementation of the EMEP monitoring strategy is far from satisfactory. 
+Figure~\ref{fig:Index-for-implementation} summarises implementation in 2019 compared to 2000, 2005 and 2010. The countries are sorted from left to right with increasing index for 2019. Slovakia,  Estonia, The Netherlands, Denmark, and Switzerland have almost complete programs with an index of 90\% or higher. Small countries generally comply better (due to more easily satisfying the site density requirements). Since 2010, 35\% of the Parties have improved their monitoring programme,  while 37\% have a decrease. Improvements are seen in e.g. France, Croatia and Belgium.  One Party, Malta, has reported data in 2019 and not in 2010, while Georgia, Moldova, Montenegro and Romania have stopped reporting/measuring. In Figure~\ref{fig:EMEP-measurement-network} in Ch~\ref{Obs_2019}, the geographical distribution of level 1 sites is shown for 2019.  In large parts of Europe, implementation of the EMEP monitoring strategy is far from satisfactory. 
 
 \begin{figure}
 	\centering
