--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -216,7 +216,7 @@ mod. & conf.interval & obs. & conf.interval &  mod. & conf.interval \\
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug yr$^{-1})$} & \multicolumn{4}{c}{Relative change (\% yr$^{-1}$)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &      &            &  
@@ -241,7 +241,7 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \scalebox{0.67}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $m^{2}$ yr$^{-1}$)} & \multicolumn{4}{c}{Relative change (\% yr$^{-1}$)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &       &                &  
@@ -613,40 +613,7 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \end{table}
 
 
-
-
-%\clearpage
-\section{Trends in Elemental and Organic Carbon}
-\label{sec:trendsECOC}
-\subsection{Elemental Carbon, EC}
-\label{ss:trendsEC}
-
-Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010--2019 from 15 EMEP sites, as annual values, and with confidence intervals, from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:ECarrows}, and Fig.\ref{fig:ECtrends} shows again the annual trends, but superimposed upon the field of modelled EC.
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC over the period 2010--2019, and for different seasons. 
-
-%
-Considering first the observed trends in elemental carbon (EC) for 2010--2019, a  reduction (-4.5$\pm$1.5~\%/yr, Tab.~\ref{tab:KEX1}) 
- was
-calculated for the 15 sites assessed, which is
-quite comparable to the reduction (-5.0$\pm$0.9~\%/yr)
-calculated for the eleven sites where the reduction was statistically
-significant. The reduction was rather similar considering these eleven
-sites, ranging from -4.2~\%/yr to -5.8~\%/yr for ten out of eleven
-sites. %, thus we see no apparent spatial pattern in the reductions
-The largest reduction was seen amongst the sites with the
-highest EC levels, i.e. at Iskrba (-7~\%/yr) in Slovenia and at Ispra
-(-5.8~\%/yr) in the Po Valley region in Northern Italy (Fig.~\ref{fig:ECtrends}). Notably, these
-were the only sites where a statistically significant reduction was
-observed for all seasons, being most pronounced in summer, although
-by a small margin. When considering all sites, the reduction was most
-pronounced in summer and autumn (Tab.~\ref{tab:KEX1}, Fig.~\ref{fig:KEX1}), but the general picture is
-that there is a minor seasonal variability in the reduction of EC. It can be noted though that
-there are more sites with significant trends (p-values $<$ 0.05) in summer than in winter (Fig.\ref{fig:ECarrows}).
-
-
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC in both observed and model results over the period 2010--2019, and for different seasons. For EC, the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4~\%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
-These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
-
+%DS moved here 2/9/2021, to stop previous page having just 1 small table.
 \begin{table}
  \caption{As Tab~\ref{tab:so2_stat}, but for EC in \pmfine, and period 2010--2019.
  %Absolute change (\ugC/yr) and relative change (\%/yr) and
@@ -677,6 +644,39 @@ Autumn &              15 &          8 &          11 &                  -0.023 & 
 \end{tabular}
 } % end scalebox
 \end{table}
+
+
+\clearpage
+\section{Trends in Elemental and Organic Carbon}
+\label{sec:trendsECOC}
+\subsection{Elemental Carbon, EC}
+\label{ss:trendsEC}
+
+Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010--2019 from 15 EMEP sites, as annual values, and with confidence intervals, from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:ECarrows}, and Fig.\ref{fig:ECtrends} shows again the annual trends, but superimposed upon the field of modelled EC.
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC over the period 2010--2019, and for different seasons. 
+
+%
+Considering first the observed trends in elemental carbon (EC) for 2010--2019, a  reduction (-4.5$\pm$1.5~\%/yr, Tab.~\ref{tab:KEX1}) 
+ was
+calculated for the 15 sites assessed, which is
+quite comparable to the reduction (-5.0$\pm$0.9~\%/yr)
+calculated for the eleven sites where the reduction was statistically
+significant. The reduction was rather similar considering these eleven
+sites, ranging from -4.2~\%/yr to -5.8~\%/yr for ten out of eleven
+sites. %, thus we see no apparent spatial pattern in the reductions
+The largest reduction was seen amongst the sites with the
+highest EC levels, i.e. at Iskrba (-7~\%/yr) in Slovenia and at Ispra
+(-5.8~\%/yr) in the Po Valley region in Northern Italy (Fig.~\ref{fig:ECtrends}). Notably, these
+were the only sites where a statistically significant reduction was
+observed for all seasons, being most pronounced in summer, although
+by a small margin. When considering all sites, the reduction was most
+pronounced in summer and autumn (Tab.~\ref{tab:KEX1}, Fig.~\ref{fig:KEX1}), but the general picture is
+that there is a minor seasonal variability in the reduction of EC. It can be noted though that
+there are more sites with significant trends (p-values $<$ 0.05) in summer than in winter (Fig.\ref{fig:ECarrows}).
+
+
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC in both observed and model results over the period 2010--2019, and for different seasons. For EC, the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4~\%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % trim L L R U 
@@ -1327,29 +1327,43 @@ Period & Area & Parameter &           total & obs & mod &                    obs
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/alltrends_south_49_2000_2019_1200m.png}
-	\caption{\label{fig:O3_perctrends_S}Trends in annual percentiles of daily max O$_3$ from 2000--2019 for EMEP observations and model calculations for sites south of 49\degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_perctrends_S}
+	As Fig.~\ref{fig:O3_perctrends_N}, but for sites south of of 49\degrees N}
+	%Trends in annual percentiles of daily max O$_3$ from 2000--2019 for EMEP %observations and model calculations for sites south of 49\degrees N: The solid %line indicates the mean, and the shaded area marks the 25th and 75th percentile. %Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/EUAOT40_Crops_2000_2019_1200m.png}
-	\caption{\label{fig:O3_aot40croptrends} Trends in 3-months AOT40 (May-July) for crops from 2000--2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49\degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_aot40croptrends} As Fig.~\ref{fig:O3_perctrends_N}, but for trends in 3-months AOT40 (May-July) for crops from 2000--2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49\degrees N.}
+	%: The solid line indicates the mean, and the shaded area marks the 25th and 75th %percentile. Only sites below 1200 m asl and with at least 15 years of data are %included.}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/EUAOT40_Forests_2000_2019_1200m.png}
-	\caption{\label{fig:O3_aot40foresttrends}Trends in 6-months AOT40 (Apr-Sep) for forests from 2000--2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49\degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_aot40foresttrends} As Fig.~\ref{fig:O3_perctrends_N}, but for trends in 6-months AOT40 (Apr-Sep) for forests from 2000--2019 for EMEP observations and model calculations for sites north (left) and south (right).}
+	  %of 49\degrees N: The solid line indicates the mean, and the shaded area marks %the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 %years of data are included.}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/SOMO35_2000_2019_1200m.png}
-	\caption{\label{fig:O3_somo35trends}Trends in SOMO35 from 2000-2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49\degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_somo35trends} As Fig.~\ref{fig:O3_perctrends_N}, but for trends in SOMO35 from 2000-2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49\degrees N.}
+	%: The solid line indicates the mean, and the shaded area marks the 25th and 75th %percentile. Only sites below 1200 m asl and with at least 15 years of data are %included.}
 \end{figure}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Moved Fig here to avoid loads dof white space on previous page
+\begin{figure}[ht]
+  \centering
+  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
+  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
+  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
+\label{fig:stats_cl_ex}
+\end{figure}
 
 \clearpage
 \section{Exceedances of critical loads of acidification and eutrophication in 2000 to 2019.}
@@ -1383,13 +1397,10 @@ Belgium, and some smaller maxima in southern Germany and Czechia,
 whereas most of Europe is not exceeded (grey areas). Acidity exceedances occur
 on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
 AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019). Overall statistics for the share of critical load exceedance and European average of AAE are shown in Figures \ref{fig:stats_cl_ex}.
-\begin{figure}[ht]
-  \centering
-  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
-  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
-  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
-\label{fig:stats_cl_ex}
-\end{figure}
+
+
+
+
 \begin{figure}[ht]
   \centering
   \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2000.png}}
