--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -13,6 +13,8 @@ for 2019. It presents major results of the activities related to emission invent
 This year special attention has been given to the trends in air pollution during the last decades, in support of the Gothenburg Protocol review.
 
 \subsection*{Measurements and model results for 2019} %Wenche, Svetlana, Sverre, Hilde to write
+%DS small changes 2/9
+
 In the first chapter, the status of air pollution in 2019 is presented, combining 
 meteorological information and emissions with numerical simulations using the EMEP MSC-W model together with observed air concentration and deposition data.
 
@@ -23,13 +25,13 @@ precipitation. The ozone network consisted of 138 sites, particulate matter was 
 78 sites, of which 50 performed measurements of both \PM[10] and \PM[2.5]. 
 In addition, 56 sites from 21 Parties reported at least one of the components required in the advanced EMEP measurement program (level 2). However, very few sites provided a complete level 2 program, i.e. only 12 sites have implemented all the required aerosol parameters. 
 
-In 2019, the mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019 and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
+In 2019, the mean daily max. O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019, and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year, and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
 
 %Svetlana & Wenche update: Updated 31.8.2021
 Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions with a mild winter and excessive precipitation in the cold seasons (especially autumn) in many parts of Europe. %In addition, the spring/summer period was (with some exceptions) relatively warm which favoured evaporation of semi-volatile inorganic and organic aerosols.
-The results from the EMEP MSC-W model simulations and the observations show general increase of the annual mean levels of \PM[10] and \PM[2.5] over land from north to south. The regional background concentrations are below 2-5 \ug in Northern Europe, increasing to 5-15 \ug in the mid-latitudes and further south. The annual mean \PM[10] are in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain, and between 10 and 15 \ug in parts of Benelux, Poland, Hungary and some of Balkan countries. Furthermore, the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug due to windblown dust from the arid soils and deserts. There is a good general agreement between the modelled and observed distributions of annual mean \PM[10] and \PM[2.5], with annual spatial correlation coefficients of 0.60 and 0.72, respectively. Overall, the model underestimates the observed annual mean of \PM[10] by 12\% and \PM[2.5] by 13\% .
+The results from the EMEP MSC-W model simulations and the observations show general increases in the annual mean levels of \PM[10] and \PM[2.5] over land from north to south. The regional background concentrations are below 2-5 \ug in Northern Europe, increasing to 5-15 \ug in the mid-latitudes and further south. The annual mean \PM[10] are in excess of 20 \ug in the Po Valley and in Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain, and between 10 and 15 \ug in parts of the Benelux region, Poland, Hungary and some of Balkan countries. Furthermore, the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug due to windblown dust from the arid soils and deserts. There is a good general agreement between the modelled and observed distributions of annual mean \PM[10] and \PM[2.5], with annual spatial correlation coefficients of 0.60 and 0.72, respectively. Overall, the model underestimates the observed annual mean of \PM[10] by 12\% and \PM[2.5] by 13\% .
 
-A lot of rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational sites show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites.
+A lot of rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational sites show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended Air Quality Guideline (AQG) of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites.
 %, with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug. 
 Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s %(with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). 
 Regional background \PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51 stations in 2019. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  %The highest number of exceedance days was 40 at HU0002 and IT0004, followed by 30, 26 and 24 at DE0044, PL0005 and AT0002, respectively. 
@@ -69,6 +71,8 @@ Most of the exceedances registered at the central European sites occurred during
 
 
 \subsection*{Status of emission reporting}
+%DS checked. NOTE change and comment for REF2.1
+
 In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS while 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
 
 After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
@@ -85,7 +89,7 @@ The treatment of condensable organics in emission factors is best known for the 
 To improve the quality of the input data for air quality models, and following a decision of the EMEP Bureaux, the group of experts at the expert workshop on condensable organics hosted by MSC-W in 2020 agreed on the following approach: 1) in year one (2020) use the so-called REF2 emission data provided by TNO, which include condensable organics, as an initial estimate for residential combustion emissions and 2) in subsequent years these top-down estimates should be increasingly replaced by national estimates. 
 %once procedures for quantifying condensable organics in a more harmonized way are agreed on and implemented. 
 
-Therefore, in 2021, CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C (small-scale combustion). For these Parties the reported PM emissions were used, while for other Parties the TNO REF2.1 data were used for GNFR sector C. The resulting GNFR C data set were combined with official EMEP emissions into the so-called EMEPwREF2.1C emission dataset. This emission data set has been used in the assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year. 
+Therefore, in 2021, CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C (small-scale combustion). For these Parties the reported PM emissions were used, while for other Parties the TNO REF2 data were used for GNFR sector C. The resulting GNFR C data set were combined with official EMEP emissions into the so-called EMEPwREF2.1C emission dataset. This emission data set has been used in the assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year. 
 
 %The assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year have been conducted with the EMEPwREF2.1C emission dataset.
 %official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). 
@@ -94,20 +98,23 @@ Therefore, in 2021, CEIP in co-operation with TNO prepared a list of Parties whe
 %Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
 
 \subsection*{Trends in air pollution 2000-2019}
-In December 2019, the Executive Body launched the review of the Gothenburg Protocol as amended in 2012. In order to support the review and assess the progress made towards achieving the environmental and health objectives of the Protocol, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations.
+%DS checked (language, not numbers):
+In December 2019, the Executive Body launched the review of the Gothenburg Protocol as amended in 2012. In order to support the review and assess the progress made towards achieving the environmental and health objectives of the Protocol, we present an assessment of the trends in air pollution in Europe for the period 2000--2019, based on long term observational data from the EMEP network as well as on EMEP MSC-W model calculations.
 We analyze trends in air concentrations for ozone, sulfur dioxide, particulate matter (and their species; sulfate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulfur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
 %Note on validity Hilde
-Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA countries. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000--2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also, that the uncertainties related to emissions and their trends in the eastern countries are large.
+Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA countries. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000--2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also that the uncertainties related to emissions and their trends in the eastern countries are large.
 Furthermore, for the different components analyzed, the number of observational sites available and the geographical coverage differs. Thus the trends for the different components are not fully consistent. 
 
 %SOX: Wenche
 \subsubsection*{Sulfur}
+%DS checked (language, not numbers):
 The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% 
 %(-4.3\% yr$^{-1}$) 
 the last two decades. The decrease is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the reductions in model calculations are somewhat larger: 97\%, 72\% and 81\%, respectively. 
 
 %NOx Hilde
 \subsubsection*{Oxidized nitrogen}
+%DS checked (language, not numbers):
 We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) have been decreasing since 2000. However, the reduction in the observations 
 %1.2\% yr$^{-1}$) 
 for NO$_2$ (24\%) and for wet deposition of oxidized nitrogen (26\%) %in total, -1.4\% yr$^{-1}$) 
@@ -119,19 +126,20 @@ for wet deposition of oxidized nitrogen). Similar results are found for other ox
 %found for observations of oxidized nitrogen compunds 
 are also significantly smaller than the changes in reported emissions of \noii (-48\% for EU27+UK+EFTA countries) for 2000--2019.
 
-It is not clear why the reductions in the reported emissions of oxidized nitrogen (and sulfur) and the trends calculated by the model are larger than what is seen in the the observations, but it might potentially indicate that the emission reductions reported are somewhat optimistic for some countries.
+It is not clear why the reductions in the reported emissions of oxidized nitrogen (and sulfur) and the trends calculated by the model are larger than those seen in the the observations, but it might potentially indicate that the emission reductions reported are somewhat optimistic for some countries.
 
 %redN Hilde 
 \subsubsection*{Reduced nitrogen}
+%DS checked (language, not numbers):
 For reduced nitrogen, the observations and the model calculations confirm that very small reductions of ammonia emissions have been achieved during the 2000--2019 period. 
 Both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen.
 On the contrary, total ammonium (\nhiii + \nhiv) in air is decreasing about 27\% in observations and 25\% in model calculations, with many more sites showing statistically significant trends.
 %-1.45\% yr$^{-1}$ (observations) and -1.33\% yr$^{-1}$ (model calculations) and with a larger fraction of the sites having significant trends. 
 These changes are larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%)
 %, in total 27\% (25\%) in observations (model calculations)
-for 2000-2019. The reduction for ammonium aerosols is even larger, around 49\%, 
+for 2000--2019. The reduction for ammonium aerosols is even larger, around 49\%, 
 %-2.6 \% yr$^{-1}$,  
-both in observations and model calculations. Very few sites have long term time series of ammonia in air (8 sites), and for very few of those sites the changes are statistically significant. However, on average, the changes observed and calculated are positive. 
+both in observations and model calculations. Very few sites have long term time series of ammonia in air (8 sites), and for very few of those sites the changes are statistically significant. However, on average, the changes in observed and calculated are positive. 
 
 These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulfur and oxidized nitrogen components. It can be noted that the results imply that the contribution of ammonia emissions to aerosols has been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
 
@@ -140,37 +148,42 @@ These large differences between the changes found for the different reduced nitr
 
 %OC and EC and 'do the organic fraction increase?': David & Karl Espen
 \subsubsection*{EC and OC}
+%DS checked (language, not numbers):
 For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime. 
 Trends in summertime OC were much less clear in both the model and observations, almost certainly due to the increased impact of biogenic sources.
 The model reproduced observed EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
 Organic aerosol comprises a major fraction of \pmfine, but major efforts are needed to separate and understand its natural and anthropogenic components, in order to get a quantitative overview of the abatable fractions.
 %
 \subsubsection*{\PM[10] and \PM[2.5]}
-For \PM[10] and \PM[2.5] statistically significant downward trends are identified for the majority of the sites for the period 2000-2019.
+%DS checked (language, not numbers):
+For \PM[10] and \PM[2.5], statistically significant downward trends are identified for the majority of the sites for the period 2000--2019.
 %(37 sites for \PM[10] and 19 for \PM[2.5]). 
 %located mostly in the western part of the EMEP domain. 
-During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (37 \% in model simulations) on average. 
+During this 20-year period, observed \PM[10] concentrations decreased by 35\%  (37\% in model simulations) on average. 
 %at the considered sites. 
-The average observed decrease of \PM[2.5] was 46 \%  (48 \% estimated by the model). The smaller reductions in \PM[10] than in \PM[2.5] can be explained by the larger contribution of natural aerosols (i.e. sea salt and windblown dust) in the coarse fraction of the former. 
+The average observed decrease of \PM[2.5] was 46\%  (48\% estimated by the model). The smaller reductions in \PM[10] than in \PM[2.5] can be explained by the larger contribution of natural aerosols (i.e. sea salt and windblown dust) in the coarse fraction of the former. 
 
 PM is a complex pollutant, consisting of aerosol species both emitted directly and formed from gaseous precursors. 
 %Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions contributed to reduce PM concentrations. During the 2000-2019 period, \soiv, \noii and \nhiv decreased on average by 3.2, 2.0 and 2.6 \% $yr^{-1}$ derived from the long term EMEP observations and by 3.8, 2.5 and 2.6 \% $yr^{-1}$ from the model simulations, thus contributing substantially to the \PM[10] and \PM[2.5] decreases. Substantial decreases of EC and wintertime OC (by around 4.5~\%/yr) was observed from 2010 to 2019, whilst the trends in summertime OC were much less clear (unfortunately consistent observational data for carbonaceous aerosols is not available for the 2000s).  
-Reduction in the secondary inorganic aerosols (\soiv, \noiii and \nhiv) components contributed substantially to the \PM[10] and \PM[2.5] decreases in 2000-2019. The contribution from EC and OC is more difficult to quantify due to the lack of observation in the 2000s. However, as described in the previous subsection, considerable reductions in EC and wintertime OC have been found for the 2010--2019 period.  
+Reduction in the secondary inorganic aerosols (\soiv, \noiii and \nhiv) components contributed substantially to the \PM[10] and \PM[2.5] decreases in 2000--2019. The contribution from EC and OC is more difficult to quantify due to the lack of observation in the 2000s. However, as described in the previous subsection, considerable reductions in EC and wintertime OC have been found for the 2010--2019 period.  
 
 %For the 2010-2019 period, the analysis shows
 %considerable reductions in EC and wintertime OC ,  but not for summertime OC.
 
-The number of EMEP sites, at which annual mean \PM[10] and \PM[2.5] concentrations exceeded WHO AQG\footnote{AQG = Air Quality Guidelines. The recommended levels are 20 and 10 \ug for \PM[10] and \PM[2.5], respectively } recommended levels, decreased during the period 2001-2019. It should be pointed out that these results cannot be considered very robust as the number of sites with exceedances is small. 
+The number of EMEP sites, at which annual mean \PM[10] and \PM[2.5] concentrations exceeded WHO AQG\footnote{AQG = Air Quality Guidelines. The recommended levels are 20 and 10 \ug for \PM[10] and \PM[2.5], respectively } recommended levels, decreased during the period 2001--2019. It should be pointed out that these results cannot be considered very robust as the number of sites with exceedances is small. 
 
 %The model results also show a decrease in the number of exceedance sites for \PM[2.5], whereas it in general fails to reproduce observed exceedances for \PM[10].
 
 
 %Ozone Sverre
 \subsubsection*{Ozone}
-Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49\degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49\degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49\degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
+%DS checked (language, not numbers):
+Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000--2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5~\%~yr$^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2~\%~yr$^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49\degrees N, both showing a reduction of the order of 
+0.5~\%~yr$^{-1}$ relative to 2000. For sites south of 49\degrees N the observations show a similar relative reduction on average, whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49\degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
 
 %Exceedances of critical loads Hilde. Done 31.8.2021
 \subsubsection*{Exceedances of critical loads}
+%DS checked (language, not numbers):
 The exceedances (AAE) of critical loads have been calculated for the years 2000, 2005, 2010, 2015 and 2019 based on the 0.1$\degrees \times$ 0.1$\degrees$ EMEP MSC-W calculations discussed in this report. The critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019. The European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
 ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of critical loads are found in the Po Valley in Italy, the
 Dutch-German-Danish border areas and in north-eastern Spain.
@@ -192,6 +205,7 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 
 %Technical EMEP Developments
 \subsection*{Model improvements} %DS updated 23/7/2021
+%DS checked (language, not numbers):
 
 The EMEP MSC-W model code has been upgraded in a number of ways. 
 A 19-sector emissions system (GNFR-CAMS) was introduced into the code. Emissions for soil NO, DMS, and aircraft were updated using results from the CAMS\_81 project. 
@@ -201,7 +215,8 @@ The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and
 
 
 \subsection*{Development in the monitoring programme} %WAa updated 31/8/2021
-The last chapter of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2010-2019. With respect to the requirement for level 1 monitoring, 35\% of the Parties have had an improvement since 2010, while 37\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development, but only few sites have a complete measurement program.
+%DS checked (language, not numbers):
+The last chapter of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2010--2019. With respect to the requirement for level 1 monitoring, 35\% of the Parties have had an improvement since 2010, while 37\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development, but only a few sites have a complete measurement program.
 
 The complexity of data reporting has increased in recent years, and it is therefore now mandatory for the data providers to use the submission and validation tool when submitting data to EMEP to improve the quality and timeliness in the data flow.
 
