--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -1,5 +1,6 @@
 \chapter[Status in 2019]{Status of transboundary air pollution in 2019}
 \label{ch:chapterStatus}
+%DS changed to Ch~X.X notation 2/9
 
 {\bf{Svetlana Tsyro, Wenche Aas, Sverre Solberg, Anna Benedictow and Hilde Fagerli}}
 \vspace{30pt}
@@ -70,7 +71,7 @@ All the data are available from the EBAS database (\url{http://ebas.nilu.no/}) a
 
 120 sites reported measurements of inorganic ions in precipitation and/or main components in air. However, not all of these measurements were co-located, as illustrated in Figure~\ref{fig:EMEP-measurement-network}. There were 73 sites with measurements in both air and precipitation.  Ozone was measured at 138 EMEP sites. The number of sites is marginally lower than in 2018.
 
-There were 78 sites measuring either PM$_{10}$ or PM$_{2.5}$ mass. 50 of these sites measured both size fractions, as recommended in the EMEP Monitoring strategy \citep{MonStrat2019}. The stations measuring EMEP level 2 variables are shown in Figure~\ref{fig:levell2-sites} in Chapter \ref{sec:Compliance-with-monitoring}, along with a discussion on compliance with the monitoring obligations and the development of the programme during the last decade.
+There were 78 sites measuring either PM$_{10}$ or PM$_{2.5}$ mass. 50 of these sites measured both size fractions, as recommended in the EMEP Monitoring strategy \citep{MonStrat2019}. The stations measuring EMEP level 2 variables are shown in Figure~\ref{fig:levell2-sites} in Ch~\ref{sec:Compliance-with-monitoring}, along with a discussion on compliance with the monitoring obligations and the development of the programme during the last decade.
 
 
 \section{Setup for EMEP MSC-W model runs}
@@ -79,22 +80,21 @@ There were 78 sites measuring either PM$_{10}$ or PM$_{2.5}$ mass. 50 of these s
 The EMEP MSC-W model version rv4.42 has been used for the 2019
 runs. The horizontal resolution is \resZO, with 20 vertical layers
 (the lowest with a height of approximately 50 meters).
-%as discussed in chapter~\ref{ch:ModelUpdates}.
+%as discussed in Ch~\ref{ch:ModelUpdates}.
 
  Meteorology, emissions, boundary conditions and forest fires for 2019 have been
  used as input. Meteorological data have been
- derived from ECMWF-IFS(cy46r1) simulations (see Section~\ref{sec:meteo}). The
+ derived from ECMWF-IFS(cy46r1) simulations (see Ch~\ref{sec:meteo}). The
  land-based emissions have been derived from the 2021 official data
  submissions to UNECE CLRTAP \citep{CEIP2021}, as documented in
- Chapter \ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were partly substituted by an emission data set provided by TNO for 2015 (the so-called REF2.1 scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS50-II), see chapter \ref{sec:EmisSVOC} The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. 
+ Ch~\ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were partly substituted by an emission data set provided by TNO for 2015 (the so-called REF2.1 scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS50-II), see Ch~\ref{sec:EmisSVOC} The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. 
  
  Emissions from international shipping
  within the EMEP domain are derived from the CAMS global shipping
  emissions \citep{CAMSemis2019}, developed by the Finnish
  Meteorological Institute (FMI). The forest fires emissions are taken from
  The Fire INventory from NCAR (FINN) \citep{Wiedinmyer2011}, version 5.
- For more details on the emissions for the 2019 model runs see Chapter
- \ref{ch:emis2019} and Appendix \ref{ch:appx_emis_2019}.
+ For more details on the emissions for the 2019 model runs see Ch~ \ref{ch:emis2019} and Appendix \ref{ch:appx_emis_2019}.
 
 
  %Trend runs with the EMEP MSC-W model have been performed for the
@@ -112,6 +112,7 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
  %volcano in 2011 have deliberately been excluded, since the model
  %cannot accurately simulate their dispersion as their intrusion
  %occurred above the model's top layer.
+ 
 \section{Air pollution in 2019} 
 \subsection{Ozone}
 \label{O3MAX}
@@ -218,7 +219,7 @@ underestimates the observed annual mean of \PM[10] by 12\% and
 Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except for the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
 November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
 
-Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Chapter \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also the 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Section \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
+Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Ch \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also the 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Ch \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
 
 %\begin{figure}[H]
 %  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2019_vs_2000-2018.pdf}}
